Fix for : Opening name container covering up other containers

--- a/src/public/pages/report/styles/report.css
+++ b/src/public/pages/report/styles/report.css
@@ -18,7 +18,6 @@
     border-radius: 10px;
     width: 90%;
     text-align: center;
-    margin-bottom: 5px;
     border: 2px solid var(--border-color);
     height: 50px;
     display: flex;
@@ -91,7 +90,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    margin-top: 25px;
+    margin-top: 10px;
     border: 2px solid var(--border-color);
 
     width: 90%;
@@ -153,9 +152,7 @@
 */
 
 #opening-name {
-    position: absolute;
     left: 5%;
-    top: 50px;
     width: 90%;
     border-radius: 10px;
     background-color: var(--primary-color);
